Sequence Assignment: instructor feedback
* enable rich text editing for feedback
* bind beforeUnload and track feedback changes to ensure the feedback is saved.

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -270,7 +270,7 @@
                                     <input type="hidden" name="publish" value="PrivateStudentAndFaculty" />
                                 {% endif %}
 
-                                <textarea name="comment" class="form-control"
+                                <textarea name="comment" class="form-control mceEditor"
                                     placeholder="Offer feedback on this student's work">{{the_feedback.comment}}</textarea>
 
                                 <div class="spacer"></div>
